--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -72,7 +72,7 @@
   - name: test to see var content
     debug:
       msg: "{{nsx_password}}"
-      msg: "temp_edge_vm_pass: {{temp_edge_vm_pass}}"
+      # msg: "temp_edge_vm_pass: {{temp_edge_vm_pass}}"
 
   - name: Provision list of compute managers
     nsxt_fabric_compute_managers:
@@ -550,7 +550,7 @@
       msg: "{{nsx_password}}"
       msg: "temp_edge_vm_pass: {{temp_edge_vm_pass}}"
   - debug:
-      msg: "{% if (shared_compute|lower == 'true') and (edge_overlay_vlan != 0) and (edge_overlay_subnet)%}EDGE_TEP_POOL_SHARED_COMPUTE{%else%}NSX_TEP_POOL{%endif%}}"    
+      msg: "{% if (shared_compute|lower == 'true') and (edge_overlay_vlan != 0) and (edge_overlay_subnet)%}EDGE_TEP_POOL_SHARED_COMPUTE{%else%}NSX_TEP_POOL{%endif%}"    
 ###################################### Deploying Edge VM
 ######################################
 
@@ -574,7 +574,7 @@
             ip_assignment_spec:
               resource_type: "StaticIpPoolSpec"
               # ip_pool_name: "NSX_TEP_POOL"
-              ip_pool_name: "{% if (shared_compute|lower == 'true') and (edge_overlay_vlan != 0) and (edge_overlay_subnet)%}EDGE_TEP_POOL_SHARED_COMPUTE{%else%}NSX_TEP_POOL{%endif%}}"
+              ip_pool_name: "{% if (shared_compute|lower == 'true') and (edge_overlay_vlan != 0) and (edge_overlay_subnet)%}EDGE_TEP_POOL_SHARED_COMPUTE{%else%}NSX_TEP_POOL{%endif%}"
             pnics: "{{item.nics}}"
             transport_zone_endpoints:
               - transport_zone_name: "TZ_Overlay"
