--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -66,12 +66,9 @@
 
 
   - name: Copy NSX-T pass to edge vm pass in case it is omitted
-    set_fact:
-      temp_edge_vm_pass: "{{edge_vm_root_password|default('slimslom')}}"
+    set_facts:
+      temp_edge_vm_pass: "{%if edge_vm_root_password%}{{edge_vm_root_password}}{%else%}{{nsx_password}}{%endif%}}"
 
-  - name: test to see var content
-    debug:
-      msg: "{{nsx_password}}"
 
   - name: test to see temvar content
     debug:
