--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -467,7 +467,7 @@
     register: nsxtm_dns
 
 
-  - name: Update static Edge TEP Uplink Profile in case of shared compute cluster
+  - name: Update static Edge TEP Vlan Uplink Profile in case of shared compute cluster
     nsxt_uplink_profiles:
       hostname: "{{nsxt_ip}}"
       username: "{{nsx_username}}"
