--- a/02_NSX_vNetworking.yml
+++ b/02_NSX_vNetworking.yml
@@ -71,8 +71,8 @@
       replication_mode: "MTEP"
       admin_state: UP
       vlan_ids: "{{item.seg_vlanids| default(omit)}}"
-      tier0_display_name: "{% if item.gw_name is defined and (item.gw_type == 'Tier-0 Gateway') %}{{ item.gw_name }}{%endif%}"
-      tier1_display_name: "{% if item.gw_name is defined and (item.gw_type == 'Tier-1 Gateway') %}{{ item.gw_name }}{%endif%}"
+      tier0_display_name: "{% if item.gw_name is defined and (item.gw_type == 'Tier-0 Gateway') %}{{ item.gw_name }}{%else%}{%endif%}"
+      tier1_display_name: "{% if item.gw_name is defined and (item.gw_type == 'Tier-1 Gateway') %}{{ item.gw_name }}{%else%}{%endif%}"
       subnets: "{{ item.seg_subnet | default(omit) }}"
       advanced_config:
         connectivity: "ON"
