--- a/02_NSX_vNetworking.yml
+++ b/02_NSX_vNetworking.yml
@@ -122,7 +122,7 @@
 
     with_items:
       - "{{ gateways }}"
-    when: item.interfaces|default(False) and item.gateway_type == 'Tier-1 Gateway'
+    when: item.gateway_type == 'Tier-1 Gateway' and item.gateway_name|default(False)
     vars:
       ansible_python_interpreter: /usr/bin/python3
 
