--- a/02_NSX_vNetworking.yml
+++ b/02_NSX_vNetworking.yml
@@ -78,6 +78,7 @@
           BGP:
             state: present
             enabled: true
+            ecmp: True
             local_as_num: "{{ bgp_local_as|int }}"
             graceful_restart_config:
               mode: HELPER_ONLY
