--- a/03_deploy_security_groups.yml
+++ b/03_deploy_security_groups.yml
@@ -54,42 +54,42 @@
 
 ###################### Crate Tags
 
-  - name: Deploy Tags on VMs
-    nsxt_vm_tags:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      virtual_machine_display_name: "{{item.vm_name}}"
-      remove_other_tags: True
-      add_tags: "{{item.tags}}"
-        # - scope: {{item.}}
-        #   tag: my-tag
-    loop: "{{vm_tags}}"
-    vars:
-      ansible_python_interpreter: /usr/bin/python3
-    when: vm_tags is defined and item.vm_name|default(False) and item.tags|default(False)  
+  # - name: Deploy Tags on VMs
+  #   nsxt_vm_tags:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     virtual_machine_display_name: "{{item.vm_name}}"
+  #     remove_other_tags: True
+  #     add_tags: "{{item.tags}}"
+  #       # - scope: {{item.}}
+  #       #   tag: my-tag
+  #   loop: "{{vm_tags}}"
+  #   vars:
+  #     ansible_python_interpreter: /usr/bin/python3
+  #   when: vm_tags is defined and item.vm_name|default(False) and item.tags|default(False)  
 
 
 ###################### Deploy security groups
 
 
-  # - name: create Policy Group
-  #   nsxt_policy_group:
-  #     hostname: "{{nsxt_ip}}"
-  #     username: "{{nsx_username}}"
-  #     password: "{{nsx_password}}"
-  #     validate_certs: False
-  #     id: test-lb-service
-  #     display_name: test-lb-service
-  #     state: "present"
-  #     domain_id: "default"
-  #     expression:
-  #       - member_type: "VirtualMachine"
-  #         value: "webvm"
-  #         key: "Tag"
-  #         operator: "EQUALS"
-  #         resource_type: "Condition"
-  #   loop: "{{}}"
-  #   vars:
-  #     ansible_python_interpreter: /usr/bin/python3
+  - name: create Security Groups
+    nsxt_policy_group:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      id: "{{item.group_name}}"
+      display_name: "{{item.group_name}}"
+      state: "present"
+      domain_id: "default"
+      expression: "{{item.expression}}"
+        # - member_type: "VirtualMachine"
+        #   value: "webvm"
+        #   key: "Tag"
+        #   operator: "EQUALS"
+        #   resource_type: "Condition"
+    loop: "{{security_groups}}"
+    vars:
+      ansible_python_interpreter: /usr/bin/python3
