--- a/03_deploy_security_groups.yml
+++ b/03_deploy_security_groups.yml
@@ -93,4 +93,6 @@
     loop: "{{security_groups}}"
     vars:
       ansible_python_interpreter: /usr/bin/python3
-    when: security_groups is defined and item.group_name|default(False) and item.expression|default(False)       
+    when: security_groups is defined and item.group_name|default(False) and item.expression|default(False)
+
+#test1
