--- a/02_NSX_vNetworking.yml
+++ b/02_NSX_vNetworking.yml
@@ -86,7 +86,7 @@
           interfaces: "{{item.interfaces}}"  
     with_items:
       - "{{ gateways }}"
-    when: item.interfaces|default(False) and item.gateway_type == 'Tier-0 Gateway' and bgp_local_as|int|default(False)
+    when: item.interfaces|default(False) and item.gateway_type == 'Tier-0 Gateway' and bgp_local_as|default(False, true)|int
     vars:
       ansible_python_interpreter: /usr/bin/python3
 
